// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render correctly 1`] = `
<div
  className="form-group undefined form-fields"
  id="reply-1"
>
  <label
    className="control-label"
    htmlFor="choices-for-field-11"
  >
    label
  </label>
  <span
    className="help-block"
  >
    Plusieurs choix sont possibles
  </span>
  <div
    className="choice-field"
    key="choice-20"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-20"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value={20}
    >
      Athlétisme
    </ForwardRef>
  </div>
  <div
    className="choice-field"
    key="choice-21"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-21"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value={21}
    >
      Natation
    </ForwardRef>
  </div>
  <div
    className="choice-field"
    key="choice-22"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-22"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value="Sports collectifs"
    >
      Sports collectifs
    </ForwardRef>
  </div>
  <div
    className="choice-field"
    key="choice-23"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-23"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value="Sports individuels"
    >
      Sports individuels
    </ForwardRef>
  </div>
</div>
`;

exports[`<Checkbox /> should render with an other field 1`] = `
<div
  className="form-group undefined form-fields"
  id="reply-1"
>
  <label
    className="control-label"
    htmlFor="choices-for-field-11"
  >
    label
  </label>
  <span
    className="help-block"
  >
    Plusieurs choix sont possibles
  </span>
  <div
    className="choice-field"
    key="choice-20"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-20"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value={20}
    >
      Athlétisme
    </ForwardRef>
  </div>
  <div
    className="choice-field"
    key="choice-21"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-21"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value={21}
    >
      Natation
    </ForwardRef>
  </div>
  <div
    className="choice-field"
    key="choice-22"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-22"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value="Sports collectifs"
    >
      Sports collectifs
    </ForwardRef>
  </div>
  <div
    className="choice-field"
    key="choice-23"
  >
    <ForwardRef
      checked={false}
      disabled={false}
      helpPrint={false}
      id="reply-1_choice-23"
      image={null}
      name="choices-for-field-11"
      onBlur={[Function]}
      onChange={[Function]}
      type="checkbox"
      value="Sports individuels"
    >
      Sports individuels
    </ForwardRef>
  </div>
  <Other
    disabled={false}
    field={
      Object {
        "choices": Array [
          Object {
            "id": 20,
            "label": "Athlétisme",
            "useIdAsValue": true,
          },
          Object {
            "id": 21,
            "label": "Natation",
            "useIdAsValue": true,
          },
          Object {
            "id": 22,
            "label": "Sports collectifs",
          },
          Object {
            "id": 23,
            "label": "Sports individuels",
          },
        ],
        "helpText": "Plusieurs choix sont possibles",
        "id": 11,
        "isOtherAllowed": true,
        "required": true,
        "slug": "pour-quel-type-d-epreuve-etes-vous-pret-a-acheter-des-places",
        "type": "checkbox",
      }
    }
    onChange={[Function]}
    value=""
  />
</div>
`;
